# insurance_propensity_model

./: README.md  model development strategy.drawio  project_notebook.ipynb  pyproject.toml
.ipynb_checkpoints/: README-checkpoint.md  project_notebook-checkpoint.ipynb  pyproject-checkpoint.toml
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
data/: submission.csv
models/: CatBoostTrial1.sav  CatBoostTrial2.sav  CatBoostTrial_final.sav
src/: eda.py  feat_select.py
src/.ipynb_checkpoints/: eda-checkpoint.py
