[tool.poetry]
name = "vpbank-project"
version = "0.1.0"
description = ""
authors = ["phamquynam"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
dvc = "3.48.4"
scikit-learn = "1.3.2"
pandas = "2.1.4"
numpy = "1.26.4"
statsmodels = "0.14.1"
matplotlib = "^3.8.3"
optbinning = "^0.19.0"
seaborn = "^0.13.2"
lightgbm = "^4.3.0"
xgboost = "^2.0.3"
catboost = "^1.2.3"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
